# image_classification

./: .envrc  .gitignore  coco_eval.py  engine.py  flake.nix  pyproject.toml  torch_test.ipynb  torch_test.py  utils.py
backup/: pyproject.toml
research/: 23_Time-Series-Prediction.ipynb  tensor_test.ipynb  torch_test.ipynb  transfer_learning.ipynb
research/torchutils/: coco_eval.py  coco_utils.py  engine.py
