[project]
name = "image-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets[vision]>=3.2.0",
    "jupyter>=1.1.1",
    "keras>=3.8.0",
    "matplotlib>=3.10.0",
    "scikit-learn>=1.6.1",
    "tensorflow-keras>=0.1",
    "tensorflow-metal>=1.2.0; sys_platform == 'darwin'",
    "tensorflow>=2.18.0",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
]
